@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [Ncat][GH#1139] Ncat now selects the correct default port for a given proxy
+  type. [Pavel Zhukov]
+
 o [NSE] memcached-info can now gather information from the UDP memcached
   service in addition to the TCP service. The UDP service is frequently used as
   a DDoS reflector and amplifier. [Daniel Miller]
